--- a/main.html
+++ b/main.html
@@ -11,15 +11,15 @@
     <script type="text/javascript" src="./script.js">
 </script>
 	<form action="" method=post>
-		<div><label for=name>Name</label>
-		<input type="text" name="name" id="name" placeholder="name" minlength="3" maxlength="50" required>
+		<div><label for="name">Name</label>
+		<input type="text" id="name" placeholder="name" minlength="3" maxlength="50" required>
 		</div><br>
 		<div><label for="portfolio">Portfolio</label>
 		<input type="URL" name="portfolio" id="portfolio" placeholder="paste your portfolio URL" required></div>
 <div><label for="favcolor">Favourite color</label>
-	<input type="color" id="favcolor" name="favcolor" required>
+	<input type="color" id="favcolor"  required>
 </div>
 <div><label for="likeness">Likeness</label>
-<input type="Range" min="1" max="100" value="50" required></div></body>
+<input type="Range" min="1" max="100" required></div></body>
 
 </html>
