--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-	<form method="post">
+	<h1>Feedback form</h1><form method="post">
 		<label for="name">Name</label>
 		<input type="text" id="name" placeholder="name" minlength="3" maxlength="50" required>
 		<br>
